manifests/shaarli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shaarli
  name: shaarli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shaarli
  template:
    metadata:
      labels:
        app: shaarli
    spec:
      containers:
        - image: ghcr.io/shaarli/shaarli:latest
          name: shaarli
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: data
              mountPath: /var/www/shaarli/data
            - name: cache
              mountPath: /var/www/shaarli/cache
      volumes:
        - name: data
        - name: cache
