manifests/shaarli/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: shaarli
  namespace: shaarli
spec:
  containers:
  - name: shaarli
    image: ghcr.io/shaarli/shaarli:latest
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: data
      mountPath: /var/www/shaarli/data
    - name: cache
      mountPath: /var/www/shaarli/cache
    ports:
    - containerPort: 80
      name: http
  volumes:
  - name: data
    emptyDir: {}
  - name: cache
    emptyDir: {}
