manifests/shaarli/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sticky-notes
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  type: ClusterIP
